# saturator

./: CMakeLists.txt  README.md
resource/: layout.rc  layout.uidesc  layout_backup.uidesc  win32resource.rc
source/: BaseController.cpp  BaseController.hpp  BaseProcessor.cpp  BaseProcessor.hpp  MessagesConsts.hpp  PluginEntry.cpp  PluginIds.hpp  Version.h
source/subcontrollers/: MainKnobController.cpp  MainKnobController.hpp  ModeSwitchController.cpp  ModeSwitchController.hpp
source/utils/: AudioBuffers.cpp  AudioBuffers.hpp  BufferArray.cpp  BufferArray.hpp  TransientDetector.hpp
source/views/: CustomCKnob.cpp  CustomCKnob.hpp  CustomCKnobCreator.cpp  CustomCKnobCreator.hpp  CustomVST3Editor.cpp  CustomVST3Editor.hpp
